crates/carta/tests/snapshots/golden_writer__ipynb__figure__figure-no-alt.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "![](pic.png)"
   ],
   "id": "0d3b31bb-f3d8-4524-b261-29a9d316d7b0"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
